k3s/deployment-order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: msa-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: localhost/order-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5002
