k3s/deployment-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: msa-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: localhost/product-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
