k3s/deployment-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: msa-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: localhost/user-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5100
