k3s/service-user-5100.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: msa-sample
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - port: 5100
      targetPort: 5100
