k3s/service-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: msa-sample
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - port: 5100
      targetPort: 5100
      nodePort: 31000  # 외부에서 접근 가능한 포트 지정 (30000~32767)
