k3s/ingress-user.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-ingress
  namespace: msa-sample
  annotations:
#    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - msa-sample.smk-p.ddns.net
    secretName: msa-sample-tls
  rules:
  - host: msa-sample.smk-p.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 5100
